# custom_k_means

./: .gitignore  README.md  demo.py  pyproject.toml
experimental/: application_demo.py
experimental/config/: default_params.yaml
experimental/results/12074/: checkpoint_12074.json
experimental/results/160068/: checkpoint_160068.json
experimental/results/42044/: checkpoint_42044.json
experimental/src/: __init__.py
experimental/src/core/: __init__.py  contour_extractor.py  edge_detector.py  grid_search_results.py  kmeans.py  level_set.py  pri_evaluator.py  silhouette_extractor.py
experimental/src/data/: __init__.py  bsd_dataset.py
experimental/src/experiments/: __init__.py  image_experiment_loader.py
src/: __init__.py
src/canny/: __init__.py  edge_detector.py  silhouette_extractor.py
src/data/: params_100075_20251113_105634.json  params_12074_20251113_104531.json  params_42044_20251113_105543.json
src/data_loader/: __init__.py  json_loader.py  notebook_params.py
src/kmeans/: __init__.py  kmeans.py
src/level_set/: __init__.py  levelset.py
src/pri/: __init__.py  config.py  pri_cache.py  pri_evaluator.py
src/viz/: __init__.py  image_grid.py
