[project]
name = "custom-k-means"
version = "0.1.0"
description = "Computer Vision course materials and exercises"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=6.5.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "pillow>=9.0.0",
    "scikit-image>=0.19.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "scikit-fmm>=2023.4.2",
    "pandas>=1.3.0",
    "image-slicer>=3.1.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "marimo",
    "seaborn>=0.13.2",
    "manimgl>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pytest>=7.0.0",
]
